--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.2.7",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "20.4.2",
@@ -32,3 +33,4 @@
     "typescript": "5.1.6"
   }
 }
+
