--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres:CoNkBhFwBdmOQniNRfTQgEEZkCatJxgK@postgres.railway.internal:5432/railway
+DATABASE_URL=postgresql://postgres:CoNkBhFwBdmOQniNRfTQgEEZkCatJxgK@shuttle.proxy.rlwy.net:59977/railway
 
