--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.44.0",
     "eslint-config-next": "13.5.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "ts-node": "^10.9.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
-
