--- a/package.json
+++ b/package.json
@@ -30,10 +30,9 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.44.0",
     "eslint-config-next": "13.5.2",
-    "typescript": "5.1.6",
-    "ts-node": "^10.9.1"
+    "typescript": "5.1.6"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=18.0.0"
   }
 }
