--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "seed": "ts-node prisma/seed.ts",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
-    "@prisma/client": "^5.0.0",
-    "autoprefixer": "^10.4.12",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.316.0",
     "next": "14.1.0",
     "postcss": "^8.4.16",
     "prisma": "^5.0.0",
+    "@prisma/client": "^5.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.2.7",
@@ -25,12 +27,13 @@
     "swr": "^2.2.0"
   },
   "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "5.1.6",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "eslint": "8.44.0",
-    "eslint-config-next": "13.5.2",
-    "typescript": "5.1.6"
+    "eslint-config-next": "13.5.2"
   },
   "engines": {
     "node": ">=18.0.0"
