--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "seed": "ts-node prisma/seed.ts",
+    "seed": "node --loader ts-node/esm prisma/seed.mts",
     "lint": "next lint"
   },
   "prisma": {
-    "seed": "node --loader ts-node/esm prisma/seed.ts"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "seed": "node --loader ts-node/esm prisma/seed.mts"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
@@ -26,17 +23,17 @@
     "prisma": "^5.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.2.0",
     "tailwindcss": "^3.2.7",
-    "zod": "^3.21.4",
-    "swr": "^2.2.0"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/node": "^20.4.2",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/node": "20.4.2",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
     "eslint": "8.44.0",
     "eslint-config-next": "13.5.2",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "typescript": "5.1.6"
   }
 }
