--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.316.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.11",
     "postcss": "^8.4.16",
     "prisma": "^5.0.0",
     "react": "18.2.0",
