Update tsconfig.json with path alias config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
     "incremental": true,
     "types": ["node"],
     "moduleDetection": "force",
-    "baseUrl": ".",                      // ✅ Add this
-    "paths": {                           // ✅ Add this
+    "baseUrl": ".",                      
+    "paths": {                           
       "@/*": ["./*"]
     }
   },
