--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "bcryptjs": "^2.4.3",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.316.0",
-    "next": "14.1.0",
+    "next": "^14.2.28",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "postcss": "^8.4.16",
     "prisma": "^5.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.34.1",
     "swr": "^2.2.0",
     "tailwindcss": "^3.2.7",
     "zod": "^3.21.4"
