--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "PORT=$PORT node .next/standalone/server.js",
+    "start": "cross-env PORT=$PORT node .next/standalone/server.js",
     "seed": "node --loader ts-node/esm prisma/seed.mts",
     "lint": "next lint"
   },
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.0.0",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^2.4.3",
+    "cross-env": "^7.0.3",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.316.0",
     "next": "^14.2.28",
