Add custom server to fix 502 error

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "cross-env PORT=${PORT:-3000} node .next/standalone/server.js",
+    "start": "cross-env PORT=${PORT:-3000} node server.js",
     "seed": "node --loader ts-node/esm prisma/seed.mts",
     "lint": "next lint"
   },
