--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "prisma": "^5.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sharp": "^0.34.1",
     "swr": "^2.2.0",
     "tailwindcss": "^3.4.17",
