--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
-    "eslint": "8.44.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.3",
     "ts-node": "^10.9.2",
     "typescript": "5.1.6"
