--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.11",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.316.0",
@@ -28,7 +32,9 @@
     "react-dom": "^18.3.1",
     "sharp": "^0.34.1",
     "swr": "^2.2.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.21.4"
   },
   "devDependencies": {
